--- a/trunk/gbxemu/doc/README
+++ b/trunk/gbxemu/doc/README
@@ -20,6 +20,12 @@ Speedup    - Space
 Screenshot - F12
 
 
+Settings during game play
+-------------------------
+
+Ctrl + f   - Switch between full screen / window mode
+
+
 Per game settings
 -----------------
 
