--- a/trunk/VBA-S/doc/Authors.txt
+++ b/trunk/VBA-S/doc/Authors.txt
@@ -1,20 +1,46 @@
-Authors in no particular order:
-
-
-Spacy
-mudlord
-Nach
-Squall Leonhart
-DJRobX
-Jonas Quinn
-Forgotten: almost everything until VBA 1.7.2
-chrono: core, asm pixel filter
-bgKu
-blargg: new audio core
-xKiv
-Costis
-pokemonhacker: GB core
-suanyuan: fps sync, Kega Fusion plugin support
+===============
+List of authors
+===============
 
 
 Some people might be missing, so please send me a message if you did something too and want to be added to this list!
+
+
+Sorted chronologically after first time of commit to the source code versioning system, grouped by project:
+
+VBA-S:
+  Spacy
+
+VBA-M:
+  mudlord
+  DJRobX
+  Nach
+  peterb
+  Spacy
+  Squall Leonhart
+  jbo_85
+  bgk
+  xkiv
+
+VBA (VisualBoyAdvance):
+  fleavba (Adam Green)
+  Forgotten
+  kxu (Sébastien Guignot)
+  pokemonhacker
+  Spacy
+
+
+Contributors:
+
+VBA-S:
+  [None yet]
+
+VBA-M:
+  chrono: core fixes, asm pixel filter
+  blargg: new audio core
+  denopqrihg: VBA-L
+  xKiv
+
+VBA (VisualBoyAdvance):
+  Costis
+  suanyuan: VBA-Smooth
